# jvdx-templates

./: .gitignore  LICENSE  README.md
cloud-run-job-node/: Dockerfile  README.md  Taskfile.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
cloud-run-node/: .dockerignore  Dockerfile  README.md  Taskfile.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
cloud-run-python/: .editorconfig  .gitignore  Dockerfile  README.md  Taskfile.sh  pyproject.toml
cloud-run-python/.github/: dependabot.yml
cloud-run-python/.github/workflows/: validate.yml
cloud-run-python/src/: main.py  runtime.py  settings.py
cloud-run-python/src/adapter/: firestore.py
cloud-run-python/src/db/: firestore.py
cloud-run-python/src/modules/: books.py
cloud-run-python/src/routes/: books.py
cloud-run-python/src/utils/: cloud_logging.py  exception_handlers.py  secure_headers.py
cloud-run-python/tests/: conftest.py  exception_handlers_test.py  log_test.py  main_test.py  secure_headers_test.py
cloud-run-python/tests/adapter/: test_firestore.py
cloud-run-python/tests/db/: firestore_test.py
cloud-run-python/tests/modules/: test_books.py
cloud-run-python/tests/routes/: test_books.py
cloud-run-python/tests/utils/: test_cloud_logging.py  test_exception_handlers.py  test_secure_headers.py
cloud-run-tanstack-start/: .dockerignore  .gitignore  .oxfmtrc.json  .oxlintrc.json  Dockerfile  LICENSE  README.md  Taskfile.sh  express-server.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
google-cloud-function/: Taskfile.sh  package-lock.json  package.json  tsconfig.json
google-cloud-run/: Dockerfile  README.md  Taskfile.sh  babel.config.cjs  package-lock.json  package.json  tsconfig.json
next-app/: .gitignore  Dockerfile  README.md  Taskfile.sh  jest.config.js  jsconfig.json  next.config.js  package-lock.json  package.json  tailwind.config.js
next-app-2/: .gitignore  Taskfile.sh
next-app-router/: .dockerignore  .gcloudignore  Dockerfile  LICENSE  README.md  Taskfile.sh  biome.json  jest.config.js  next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json  vitest.config.ts
next-pages-router/: .dockerignore  Dockerfile  README.md  Taskfile.sh  jest.config.js  (+3 more)
v2/cloud-run-python/: Dockerfile  README.md  Taskfile.sh  pyproject.toml
v2/cloud-run-python/scripts/: update_dependencies.py
v2/cloud-run-python/src/utils/: exception_handlers.py
v2/cloud-run-python/tests/: conftest.py  log_test.py
(+521 files in other folders)
